@@ -3,6 +3,7 @@ from trytond.pool import Pool
 from .report_engine import *
 from .ir import *
 from .event import *
+from .tools import *
 
 
 def register():
@@ -17,6 +18,8 @@ def register():
         EventType,
         EventTypeReportTemplate,
         Model,
+        SelectTemplatesForConversion,
+        MatchDisplayer,
         module='report_engine', type_='model')
     Pool.register(
         ReportGenerate,
@@ -24,4 +27,5 @@ def register():
         module='report_engine', type_='report')
     Pool.register(
         ReportCreate,
+        ConvertTemplate,
         module='report_engine', type_='wizard')
