@@ -8,3 +8,4 @@ depends:
 xml:
     report_engine.xml
     event.xml
+    tools.xml
