@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<tree string="Templates" editable="bottom">
+    <field name="to_update"/>
+    <field name="model_name"/>
+    <field name="name"/>
+    <field name="language"/>
+    <field name="match" expand="1"/>
+    <field name="new_value" expand="1"/>
+    <field name="template_id" tree_invisible="1"/>
+</tree>
